Adding first line in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document </title>
 </head>
 <body>
-    
+    <div>
+        <p>This is the first line in index.html</p>
+    </div>
 </body>
 </html>
