--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>
         <p>This is the first line in index.html</p>
+        <p>Adding the second line</p>
     </div>
 </body>
 </html>
