--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <p>This is the first line in index.html</p>
-        <p>Adding the second line</p>
+        <p>Adding the second line (button)</p>
     </div>
 </body>
 </html>
