--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
         <p>This is the first line in index.html</p>
         <p>Adding the second line (button)</p>
-        <p>Adding the second line (dropdown)</p>
+        <p>Adding the second line (dropdown tag)</p>
     </div>
 </body>
 </html>
